using preventEvent() instead overflow hidden to avoid user interference in list maping

--- a/src/components/MoviesSection/CatalogList/style.css
+++ b/src/components/MoviesSection/CatalogList/style.css
@@ -46,7 +46,7 @@
 .list button.arrow {
   display: none;
   width: 50px;
-  height: 100%;
+  height: 97%;
   background-color: rgba(0, 0, 0, 0);
   cursor: pointer;
   color: var(--white);
@@ -82,9 +82,14 @@
   gap: 6px;
   height: 100%;
   width: calc(100vw - 17px);
-  overflow: hidden;
+  overflow: auto;
+  align-items: center;
 
   display: flex;
+}
+
+.list .slide-content::-webkit-scrollbar {
+  display: none;
 }
 
 .list .arrow-left {
@@ -100,6 +105,7 @@
 }
 
 .list .slide-content .single-slide-movie {
+  margin-top: 0px;
   position: relative;
   cursor: pointer;
 }
